--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.flipkart</groupId>
   <artifactId>Flipkart-app</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>RELEASE-2.0</version>
   <packaging>pom</packaging>
   <modules>
   	<module>PAYMENT</module>
